# autoresearch-rocm

./: README.md  prepare.py  program.md  pyproject.toml  requirements-rocm-wsl.txt  results.tsv  train.py
scripts/: setup_rocm_wsl.sh
tests/: test_rocm_port.py
